--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ header.sticky {
 	min-width: 330px;
 	height: auto;
 	width: 100%;
-	border-radius: 8px;
+	border-radius: 22px;
 }
 
 .about-text h2 {
@@ -547,5 +547,56 @@ form textarea {
 	.home {
 		height: 87vh;
 
+	}
+}
+
+@media (max-width: 920px) {
+	.about {
+		grid-template-columns: 1fr;
+	}
+	.about-img {
+		text-align: center;
+		order: 2;
+	}
+	.about-img img {
+		width: 100%;
+		height: auto;
+		min-width: 100%;
+	}
+	.contact {
+		grid-template-columns: 1fr;
+	}
+}
+
+@media (max-width: 840px) {
+	#menu-icon {
+		display: block;
+	}
+	.navlist {
+		position: absolute;
+		top: -1000px;
+		right: 0;
+		left: 0;
+		display: flex;
+		flex-direction: column;
+		background: var(--bg-color);
+		text-align: left;
+		transition: all .45s ease;
+	}
+	.navlist a {
+		display: block;
+		margin: 17px;
+		font-size: 20px;
+		transition: all .45s ease;
+		color: var(--text-color);
+	}
+	.navlist a:hover {
+		color: var(--main-color);
+	}
+	.navlist a.active {
+		color: var(--text-color);
+	}
+	.navlist.open {
+		top: 100%;
 	}
 }
