--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ header.sticky {
 }
 
 .about-img img {
-	min-width: 330px;
+	max-width: 430px;
 	height: auto;
 	width: 100%;
 	border-radius: 22px;
